                        for the tau distribution described by MacKinnon (1994).
      * test = "hadri": * fixed p-value (now based on one-sided test).
                        * fixed statistic in non-heteroskedasticity case (Hcons = FALSE).
                        * for non-het. consistent case, one can now use dfcor = TRUE.
      * test = "ips": p-value fixed (now one-sided to the left).
      
  * pbltest: now accepts pdata.frames with index not in first two columns.
  * cortab: new function to compute cross-sectional correlation matrix.



Changes in version 1.6-6

  * ercomp: re-written to be a more general framework.
  * plm:
      * random effect models: some random methods extended to unbalanced 
        two-ways case (Nerlove's method only supports balanced one-way, two-ways),
        thanks to the more general ercomp framework.
      * nested random effects model implemented (Baltagi/Song/Jung (2001)),
        use effect = "nested".
      * two-way fixed effects model for unbalanced panels is faster.
      * new argument 'weights' added.
      * fix backward compatibility for the (deprecated!) argument 'instruments'
        to estimate IV models (but rather use 2-part formulae for IV models).
      * plm gives an informative error message if all terms are dropped in an 
        estimation due to aliasing.
      * argument inst.method: value "bmc" renamed to "bms" for the Breusch-Mizon-Schmidt
        method ("bmc" was a typo, back-compatible solution implemented).
  * pht: argument model: value "bmc" renamed to "bms" (cf. plm).
  * pldv: new function to compute fixed and random effects models for
          truncated or censored dependent variable.
  * pbsytest:
      * test = "j": [joint test by Baltagi/Li(1991)]:
        fixed degrees of freedom (now df = 2 instead of df = 1).
      * unbalanced version of all statistics implemented (Sosa-Escudero/Bera (2008)).
      * new argument 're.normal' (only relevant for test = "re"): allows to compute